examples/test/testpolicy3707.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3707
  namespace: namespace296
spec:
  podSelector:
    matchLabels:
      key21: value37
      key10: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value38
      podSelector:
        matchLabels:
          key49: value25
          key20: value44
          key48: value40
